--- a/src/Components/AboutUs/aboutUs.css
+++ b/src/Components/AboutUs/aboutUs.css
@@ -1,6 +1,138 @@
-.banner {
-    background-image: url("../../assets/AboutUsBanner.png");
-    height: 600px;
-    background-size: cover;
+.about-us-container {
+  font-style: normal;
 }
 
+.content-container {
+  margin-top: 61px;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+.title {
+  align-self: center;
+}
+
+h1.title {
+  color: #151212;
+  text-align: center;
+  font-family: DM Sans;
+  font-size: 70px;
+
+  font-weight: 700;
+  line-height: normal;
+}
+
+.title span {
+  color: #e78124;
+}
+
+.content {
+  display: flex;
+  gap: 70px;
+  margin-top: 90px;
+  margin-left: 86px;
+  align-items: center;
+}
+
+.content p {
+  width: 500px;
+  color: #000;
+  text-align: justify;
+  font-family: Roboto;
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 40px; /* 211.538% */
+}
+
+.paragraph img {
+  width: 600px;
+  height: 700px;
+  border-radius: 50px;
+}
+
+/* Contact card css */
+.contact-section {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-card {
+  margin-top: 80px;
+  align-self: center;
+  border: 5px solid #d4d4d4;
+  box-shadow: 10px 10px 3px -3px #00000030;
+  background: #fff;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0px;
+  margin-bottom: 50px;
+}
+
+.contact-card h2 {
+  margin-left: 59px;
+  color: #000;
+  font-family: Inter;
+  font-size: 40px;
+
+  font-weight: 400;
+  line-height: normal;
+}
+
+.form-container {
+  display: flex;
+  margin-top: 53px;
+  width: 100%;
+  justify-content: center;
+  padding: 0px 40px;
+}
+
+.form {
+  width: 100%;
+}
+
+.form input,
+textarea {
+  /* width: 500px; */
+  padding: 28px 0px 28px 33px;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 34px;
+
+  color: #707070;
+  font-family: Inter;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  gap: 66px;
+}
+
+.submit {
+  margin-top: 40px;
+  width: 191px;
+  height: 60px;
+  border-radius: 50px;
+  background: #e78124;
+  border: none;
+
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.submit-button {
+  display: flex;
+  justify-content: flex-end;
+}
