--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -49,9 +49,11 @@
 .button {
   border-radius: 50px;
   width: 118px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
+  align-self: center;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 20px;
+
 }
 
 .button .nav-links {
