--- a/src/Components/ChildrenHomeIndividual/chi.css
+++ b/src/Components/ChildrenHomeIndividual/chi.css
@@ -128,3 +128,128 @@
   background: #000;
   border: none;
 }
+
+/* Leadership Component */
+.leadership-container {
+  display: flex;
+  flex-direction: column;
+  gap: 84px;
+  padding: 83px 67px 39px 67px;
+  align-items: center;
+}
+
+.leadership-container h1 {
+  color: #000;
+  text-align: center;
+  font-family: DM Sans;
+  font-size: 59px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  width: 100%;
+}
+
+.leadership-images {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+/* LeadershipCard Component */
+
+.leadership-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+}
+
+.leader-image {
+  width: 100%;
+  max-width: 100%;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  border-radius: 180px;
+  height: 250px;
+}
+
+.leadership-card-container h1 {
+  color: #151212;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 38px; /* 158.333% */
+}
+
+.leadership-card-container h2 {
+  color: #e78124;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 38px; /* 172.727% */
+}
+
+.gallery-container {
+  display: flex;
+  flex-direction: column;
+  gap: 79px;
+  align-items: center;
+  width: 100%;
+  padding: 0px 67px;
+}
+
+.gallery-container h1 {
+  color: #e78124;
+  text-align: center;
+  font-family: DM Sans;
+  font-size: 59px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.gallery-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 29px;
+  width: 100%;
+  margin-bottom: 36px;
+}
+
+.gallery-images {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.gallery-nav-buttons {
+  display: flex;
+  gap: 174px;
+}
+
+.gallery-nav-buttons button {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #E78124;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+}
+
+/* IndividualSlide Component */
+.gallery-slide {
+  width: 349px;
+  height: 270px;
+  background-position: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
