--- a/src/Components/Impact/ImpactLayout.css
+++ b/src/Components/Impact/ImpactLayout.css
@@ -1,3 +1,4 @@
+
 .layout-container{
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -17,6 +18,7 @@
   list-style: none;
   justify-content: space-between;
   align-items: center;
-  max-width: 800px;
+  max-width: 600px;
   margin: auto;
+  font-family: 'DM Sans', sans-serif;
 }
