--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -16,7 +16,7 @@ body{
 }
 .home-box{
     width: 100%;
-    height: 550px;
+    height: 500px;
     border-radius: 0px 0px 50px 50px;
     background: linear-gradient(135deg, #EAB98D 0%, #FFEAD7 100%);
 }
@@ -105,7 +105,7 @@ a{
     border: 3px solid #C8905D;
     background: #FCFCFC;
     padding: 15px 17px;
-    width: 300px;
+    width: 370px;
     margin-top: 3%;
 }
 input:focus {
@@ -378,6 +378,9 @@ input:focus {
 }
 .causes .causes-overall button.btn4{
     background-color: #E78124;
+}
+.blog{
+    padding-bottom: 5%;
 }
 .blog .blog-header{
     padding-left: 5%;
