--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -8,5 +8,5 @@ $secondary-links: #c8905d;
 $secondary-dark-brown: #eac28d;
 
 /* Gradients */
-$diagonal-gradient: linear-gradient(135deg, #c8905d, #eac28d);
+$diagonal-gradient: linear-gradient(135deg, #eac28d, #ffead7);
 $top-bottom-gradient: linear-gradient(to bottom, #eab98d, #ffead7);
