--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -5,7 +5,7 @@ $primary-black: #000000;
 /* Secondary colors */
 $secondary-brown: #e78124;
 $secondary-links: #c8905d;
-$secondary-dark-brown: #eac28d;
+$secondary-light-brown: #ffead7;
 
 /* Gradients */
 $diagonal-gradient: linear-gradient(135deg, #eac28d, #ffead7);
