--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,7 @@
 $primary-brown: #e9801f;
 $primary-white: #ffffff;
 $primary-black: #000000;
+$primary-blue: #2f2e41;
 
 /* Secondary colors */
 $secondary-brown: #e78124;
