--- a/src/Layout/_layout.scss
+++ b/src/Layout/_layout.scss
@@ -47,6 +47,10 @@
     .footer {
         @extend %header-footer;
         padding-top: 15px;
+        .footer-links {
+            display: flex;
+            gap: 50px;
+        }
         .newsletter {
             .footer-social {
                 margin-bottom: 5px;
