--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -5,7 +5,7 @@ $primary-blue: #2f2e41;
 
 /* Secondary colors */
 $secondary-brown: #e78124;
-$secondary-links: #c8905d;
+$secondary-dull-brown: #c8905d;
 $secondary-light-brown: #ffead7;
 
 /* Gradients */
