--- a/src/Layout/_layout.scss
+++ b/src/Layout/_layout.scss
@@ -47,6 +47,7 @@
     }
     .content {
         padding: $general-side-paddng;
+        background: $primary-white;
     }
     .footer {
         @extend %header-footer;
