--- a/src/views/Home/_home.scss
+++ b/src/views/Home/_home.scss
@@ -1,15 +1,12 @@
 .home-container {
     .hero {
         background: $diagonal-gradient;
-        margin: 0 -40px;
+        margin: $general-full-margin;
         padding: 25px 40px;
-        border-bottom-left-radius: 30px;
-        border-bottom-right-radius: 30px;
+        border-bottom-left-radius: 40px;
+        border-bottom-right-radius: 40px;
         margin-bottom: 40px;
         .hero-title {
-            font-family:
-                DM Sans,
-                sans-serif;
             span {
                 color: $primary-brown;
             }
@@ -23,6 +20,31 @@
                 border-radius: 20px;
                 height: 120%;
                 background-position: center;
+            }
+        }
+    }
+    .home-services {
+        margin: $general-full-margin;
+        background: $diagonal-gradient;
+        padding: 25px 40px;
+        border-radius: 30px;
+        margin-top: 30px;
+        margin-bottom: 40px;
+        text-align: center;
+        .title {
+            margin: 0px auto 10px auto;
+        }
+
+        .services-card {
+            min-width: 150px;
+            background: $primary-white;
+            border-radius: 20px;
+            padding: 20px 10px;
+            -webkit-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.25);
+            -moz-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.25);
+            box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.25);
+            button {
+                margin-top: auto;
             }
         }
     }
