--- a/src/views/Home/_home.scss
+++ b/src/views/Home/_home.scss
@@ -2,7 +2,9 @@
     .hero {
         background: $diagonal-gradient;
         margin: $general-full-margin;
-        padding: 25px 40px;
+        padding: $general-side-paddng;
+        padding-top: 25px;
+        padding-bottom: 25px;
         border-bottom-left-radius: 40px;
         border-bottom-right-radius: 40px;
         margin-bottom: 40px;
@@ -24,12 +26,11 @@
         }
     }
     .home-services {
-        margin: $general-full-margin;
         background: $diagonal-gradient;
         -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
         -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
         box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
-        padding: 25px 40px;
+        padding: 25px 30px 40px 30px;
         border-radius: 30px;
         margin-top: 30px;
         margin-bottom: 40px;
@@ -61,9 +62,9 @@
         }
 
         .carousel {
-              button {
-                        color: $primary-blue;
-                    }
+            button {
+                color: $primary-blue;
+            }
             .testimonial-card {
                 width: 80%;
                 flex-wrap: nowrap;
