--- a/src/Layout/_layout.scss
+++ b/src/Layout/_layout.scss
@@ -36,7 +36,7 @@
             }
             li:nth-last-child(3) {
                 > span {
-                    background: $secondary-brown;
+                    background: $primary-brown;
                     @extend %user-menu-items;
                 }
             }
@@ -90,7 +90,7 @@
         margin-bottom: 5px !important;
     }
     li:nth-last-child(1) {
-        background: $secondary-brown;
+        background: $primary-brown;
         color: $primary-white !important;
     }
 }
