--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -4,7 +4,7 @@ $primary-black: #000000;
 $primary-blue: #2f2e41;
 
 /* Secondary colors */
-$secondary-brown: #e78124;
+$secondary-brown: #EAB98D;
 $secondary-dull-brown: #c8905d;
 $secondary-light-brown: #ffead7;
 
