--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -7,6 +7,7 @@ $primary-blue: #2f2e41;
 $secondary-brown: #EAB98D;
 $secondary-dull-brown: #c8905d;
 $secondary-light-brown: #ffead7;
+$border-grey: #D4D4D4;
 
 /* Gradients */
 $diagonal-gradient: linear-gradient(135deg, #eac28d, #ffead7);
