--- a/src/views/AboutUs/_aboutUs.scss
+++ b/src/views/AboutUs/_aboutUs.scss
@@ -12,4 +12,25 @@
             }
         }
     }
+    .about-form {
+        @extend %heading;
+        margin-top: 50px;
+        margin-bottom: 30px;
+        .form {
+            border: 2px solid $border-grey;
+            @extend %box-shadow;
+            padding: 20px;
+            width: 100%;
+            h3 {
+                margin-bottom: 20px;
+            }
+            .button {
+                margin-top: 20px;
+                justify-content: flex-end;
+                > div {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
 }
