--- a/src/views/AboutUs/_aboutUs.scss
+++ b/src/views/AboutUs/_aboutUs.scss
@@ -17,7 +17,7 @@
         margin-top: 50px;
         margin-bottom: 30px;
         .form {
-            border: 2px solid $border-grey;
+            border: 4px solid  rgba(0, 0, 0, 0.2);
             @extend %box-shadow;
             padding: 20px;
             width: 100%;
