added the cards for the display of the homes

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,3 +12,8 @@ $border-grey: #D4D4D4;
 /* Gradients */
 $diagonal-gradient: linear-gradient(135deg, #eac28d, #ffead7);
 $top-bottom-gradient: linear-gradient(to bottom, #eab98d, #ffead7);
+
+// Reusable Styles
+$general-side-paddng: 0px 60px;
+$general-full-margin: 0px -60px;
+
