--- a/src/sass/_reusable.scss
+++ b/src/sass/_reusable.scss
@@ -1,4 +1,5 @@
-@use "./colors";
+@use "variables" as *;
+
 @mixin flex-column-center {
     display: flex;
     flex-direction: column;
@@ -16,12 +17,29 @@
 }
 
 %heading {
-     h1 {
-            text-align: center;
-            margin: auto;
-            margin-bottom: 30px;
-            span {
-                color: $primary-brown;
-            }
+    h1 {
+        text-align: center;
+        margin: auto;
+        margin-bottom: 30px;
+        span {
+            color: $primary-brown;
         }
+    }
+}
+
+@mixin images($width, $height, $class, $max-height: none) {
+    .#{$class} {
+        width: $width; /* Adjust width as needed */
+        height: $height; /* Adjust height as needed */
+        position: relative;
+        max-height: $max-height;
+        overflow: hidden;
+
+        > img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+    }
 }
