put the needs banner

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,3 +6,4 @@
 @import "../views/Home/home";
 @import "../views/AboutUs/aboutUs";
 @import "../views/Discover/discover";
+@import "../views/CenterDetails/details"
