started on the services pages

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,8 @@
 @import "../views/AboutUs/aboutUs";
 @import "../views/Discover/discover";
 @import "../views/CenterDetails/details";
+@import "../views/Services/services";
+
 
 @tailwind base;
   @tailwind components;
