added the sign in page

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,7 +8,7 @@
 @import "../views/Discover/discover";
 @import "../views/CenterDetails/details";
 @import "../views/Services/services";
-
+@import "../views/Auth/auth";
 
 @tailwind base;
   @tailwind components;
