adding the styling for mobile

--- a/src/views/Auth/_auth.scss
+++ b/src/views/Auth/_auth.scss
@@ -4,6 +4,7 @@
 
   .sign-in {
     // @include images("", 250px, "sign-in-pic", "")
+    width: 100%;
 
     .sign-in-pic {
       @extend %box-shadow;
