--- a/src/views/Auth/_auth.scss
+++ b/src/views/Auth/_auth.scss
@@ -1,40 +1,44 @@
 .auth {
-  margin-top: 30px;
-  margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 
-  .sign-in {
-    // @include images("", 250px, "sign-in-pic", "")
-    width: 100%;
+    .sign-in {
+        @include images(100%, 100%, "sign-in-pic", "");
+        width: 100%;
 
-    .sign-in-pic {
-      @extend %box-shadow;
-      border-radius: 20px;
-      overflow: hidden !important;
-      @media (max-width: 768px) {
-        display: none;
-      }
-    }
-    .form-side {
-      h1 {
-        text-align: center;
-        span {
-          color: $primary-brown;
+        .sign-in-pic {
+            @extend %box-shadow;
+            border-radius: 20px;
+            overflow: hidden !important;
+
+            @media (max-width: 768px) {
+                display: none;
+            }
         }
-        margin-bottom: 50px;
-      }
+        .form-side {
+            h1 {
+                text-align: center;
+                span {
+                    color: $primary-brown;
+                }
+                margin-bottom: 50px;
+            }
 
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
 
-      form {
-        width: 70%;
-        .submit-button {
-          width: 100%;
-          @extend %box-shadow;
+            form {
+                width: 70%;
+                @media (max-width: 576px) {
+                    width: 100%;
+                }
+                .submit-button {
+                    width: 100%;
+                    @extend %box-shadow;
+                }
+            }
         }
-      }
     }
-  }
 }
