added my middle card

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import "../views/CenterDetails/details";
 @import "../views/Services/services";
 @import "../views/Auth/auth";
+@import "../views/Blog/blog";
 
 @tailwind base;
   @tailwind components;
