added ci/cd pipelines

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,10 +4,10 @@ $primary-black: #000000;
 $primary-blue: #2f2e41;
 
 /* Secondary colors */
-$secondary-brown: #EAB98D;
+$secondary-brown: #eab98d;
 $secondary-dull-brown: #c8905d;
 $secondary-light-brown: #ffead7;
-$border-grey: #D4D4D4;
+$border-grey: #d4d4d4;
 
 /* Gradients */
 $diagonal-gradient: linear-gradient(135deg, #eac28d, #ffead7);
@@ -16,4 +16,3 @@ $top-bottom-gradient: linear-gradient(to bottom, #eab98d, #ffead7);
 // Reusable Styles
 $general-side-paddng: 0px 60px;
 $general-full-margin: 0px -60px;
-
