--- a/src/views/Services/_services.scss
+++ b/src/views/Services/_services.scss
@@ -1,45 +1,43 @@
 .services-container {
-    @include images('', 250px, "services-hero", '');
+  @include images("", 250px, "services-hero", "");
 
-    .services-hero {
-        margin: $general-full-margin;
-        margin-bottom: 30px;
+  .services-hero {
+    margin: $general-full-margin;
+    margin-bottom: 30px;
 
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            /* Dark overlay with 50% opacity */
-        }
-
-        .title {
-            color: $secondary-light-brown;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 1;
-
-        }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      /* Dark overlay with 50% opacity */
     }
 
-    .tabs {
-        .ant-tabs-nav {
-            &::before {
-                border: none;
-            }
-        }
+    .title {
+      color: $secondary-light-brown;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
     }
+  }
 
-    .donation-card {
-        margin-bottom: 30px;
-        background: rgba($secondary-brown, 0.56);
-        @extend %box-shadow;
-        padding: 20px;
-        border-radius: 30px;
+  .tabs {
+    .ant-tabs-nav {
+      &::before {
+        border: none;
+      }
     }
+  }
 
+  .donation-card {
+    margin-bottom: 30px;
+    background: rgba($secondary-brown, 0.56);
+    @extend %box-shadow;
+    padding: 20px;
+    border-radius: 30px;
+  }
 }
