--- a/client/src/views/AboutUs/_aboutUs.scss
+++ b/client/src/views/AboutUs/_aboutUs.scss
@@ -18,6 +18,7 @@
     margin-bottom: 30px;
     .form {
       border: 4px solid rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
       @extend %box-shadow;
       padding: 20px;
       width: 100%;
