added a lot of the requires styles to provide consistency

--- a/client/src/Layout/_layout.scss
+++ b/client/src/Layout/_layout.scss
@@ -42,28 +42,7 @@
     flex: 1;
   }
   .footer {
-    @extend %header-footer;
-    padding-top: 15px;
-    .footer-row {
-      @media (max-width: 768px) {
-        flex-direction: column-reverse !important;
-      }
-      .footer-links {
-        display: flex;
-        gap: 50px;
-        .ant-list-item {
-          padding: 10px 32px 10px 0px;
-        }
-      }
-      .newsletter {
-        .footer-social {
-          margin-bottom: 5px;
-          &:hover {
-            color: $primary-brown !important;
-          }
-        }
-      }
-    }
+    padding: $general-side-paddng;
   }
 }
 
